applications/repo-thirdparty-cn-north4/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: repo-thirdparty
  name: repo-thirdparty
