applications/repo-thirdparty-cn-north4/mindspore_thirdparty.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mindspore
  namespace: repo-thirdparty
  labels:
    app: repo-nginx-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: repo-nginx-pod
  template:
    metadata:
      labels:
        app: repo-nginx-pod
    spec:
      containers:
        - name: repo-nginx
          image: swr.cn-north-1.myhuaweicloud.com/mindspore/nginx-extras:1.10.3
          imagePullPolicy: "Always"
          volumeMounts:
            - mountPath: /etc/nginx/conf/nginx.conf
              name: repo-nginx-configmap-volume
              subPath: nginx.conf
            - mountPath: /etc/nginx/conf/conf.d/default.conf
              name: repo-nginx-configmap-volume
              subPath: default.conf
            - mountPath: /repo
              name: mindspore-data-volume
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /repo/mindspore
              exec nginx -g "daemon off;"
          resources:
            requests:
              cpu: 4000m
              memory: 4000Mi
        - name: rsync-server
          image: mindspore/rsyncd:0.0.5
          imagePullPolicy: "Always"
          volumeMounts:
            - mountPath: /etc/rsyncd.conf
              name: repo-nginx-configmap-volume
              subPath: rsyncd.conf
            - mountPath: /etc/rsyncd.secrets.ro
              name: website-secrets-volume
              subPath: rsyncd_secrets
            - mountPath: /repo/mindspore
              name: mindspore-data-volume
            - mountPath: /root/.ssh/authorized_keys.ro
              name: repo-nginx-configmap-volume
              subPath: ssh.pub
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
          command:
            - /bin/sh
            - -c
            - |
              cp /etc/rsyncd.secrets.ro /etc/rsyncd.secrets
              chmod 0400 /etc/rsyncd.secrets
              cp /root/.ssh/authorized_keys.ro /root/.ssh/authorized_keys
              chmod 0400 /root/.ssh/authorized_keys
              chown root:root /root/.ssh/authorized_keys
              /usr/sbin/sshd &
              exec /usr/bin/rsync --no-detach --daemon --config /etc/rsyncd.conf;
      volumes:
        - name: repo-nginx-configmap-volume
          configMap:
            name: mindspore-configmap
        - name: mindspore-data-volume
          persistentVolumeClaim:
            claimName: mindspore-data-volume
        - name: website-secrets-volume
          secret:
            secretName: website-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: mindspore-service
  namespace: repo-thridparty
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 8e61e033-8770-4761-b54b-d9f4b04e75fb
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
#  We need set this into 'Local' since we need get the client IP of elb.
  externalTrafficPolicy: Local
  ports:
    - port: 873
      name: rsync-server-port
      targetPort: 873
    - port: 8081
      name: nginx-repo-http
      targetPort: 80
    - port: 80
      name: nginx-repo-http2
      targetPort: 80
    - port: 22
      name: rsync-ssh-server-port
      targetPort: 22
  selector:
    app: repo-nginx-pod
  type: LoadBalancer
  loadBalancerIP: 114.116.244.255
