applications/repo-thirdparty-cn-north4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindspore-extral-service
  namespace: repo-thirdparty
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 8e61e033-8770-4761-b54b-d9f4b04e75fb
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  #We need set this into 'Local' since we need get the client IP of elb.
  externalTrafficPolicy: Local
  ports:
    - port: 8081
      name: nginx-repo-http
      targetPort: 80
  selector:
    app: repo-nginx-pod
  type: LoadBalancer
  loadBalancerIP: 114.116.244.255
